updated styles, stripe

--- a/src/assets/css/application.css
+++ b/src/assets/css/application.css
@@ -43,3 +43,9 @@ section.plans {
 .edit-box form {
   padding-top: 3%;
 }
+
+.center-div {
+  text-align: center;
+  display: inline-block;
+  margin: 0 auto;
+}
