changes css done

--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -35,7 +35,7 @@
       </div>
       <section class="row justify-content-center">
         <div class="col-lg-3 text-center">
-          <a href="/wikis" class="btn btn-secondary btn-lg">See Wikis</a>
+          <a href="/wikis" class="btn btn-rounded btn-secondary btn-lg">See Wikis</a>
         </div>
       </section>
       <section class="row justify-content-center plans">
@@ -44,7 +44,7 @@
             Create as many public <br />wikis as you want!
           </h5>
           <p class="card-text"><b>FREE PLAN</b><br />$0</p>
-          <a href="/users/sign_up" class="btn btn-secondary btn-lg">Sign up</a>
+          <a href="/users/sign_up" class="btn btn-rounded btn-secondary btn-lg">Sign up</a>
         </div>
 
         <div class="col-lg-3 text-center">
@@ -53,7 +53,7 @@
             unlimited amount
           </h5>
           <p class="card-text"><b>PREMIUM PLAN</b><br />$10/month</p>
-          <a href="/users/upgrade" class="btn btn-primary btn-lg">Sign up</a>
+          <a href="/users/upgrade" class="btn btn-rounded btn-info btn-lg">Sign up</a>
         </div>
       </section>
     </main>
