--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -19,7 +19,7 @@
         <% }) %>
         <% if(currentUser) { %>
           <div class="text-center">
-            <a href="wikis/new" class="btn btn-primary btn-lg">New Wiki</a>
+            <a href="wikis/new" class="btn btn-secondary btn-rounded btn-lg">Create</a>
           </div>
           <% } %>
 
