--- a/src/views/wikis/new.ejs
+++ b/src/views/wikis/new.ejs
@@ -6,14 +6,12 @@
   <body>
     <% include ../static/partials/navbar.ejs %>
 
-    <main class="container p-8 mt-16">
-      <h1>New Public Wiki</h1>
-
+    <main class="container p-8 mt-16 flex justify-center">
       <% include ../static/partials/messages.ejs %> <% if(currentUser &&
       currentUser.role == "standard" || currentUser.role === "premium" ||
       currentUser.role === "admin") { %>
 
-      <form action="/wikis/create" method="post">
+      <form class="w-3/5" action="/wikis/create" method="post">
         <div class="form-group">
           <label for="title">Wiki's title</label>
           <input
@@ -33,7 +31,7 @@
             placeholder="Enter body"
           ></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-info btn-rounded">Submit</button>
       </form>
 
       <% } %>
